--- a/test_ciSystem_20170120/app/views/tbl_slot_config/search.phtml
+++ b/test_ciSystem_20170120/app/views/tbl_slot_config/search.phtml
@@ -42,7 +42,7 @@
                 <td><?php echo $tbl_slot_config->uint_slot_index ?></td>
             <td><?php echo $tbl_slot_config->rack_name ?></td>
             <td><?php echo $tbl_slot_config->rack_number ?></td>
-            <td><?php echo $tbl_slot_config->bool_slot_availability ?></td>
+            <td><?php echo $tbl_slot_config->uint_slot_availability ?></td>
             <td><?php echo $tbl_slot_config->uint_box_index ?></td>
             <td><?php echo $tbl_slot_config->uint_rack_type ?></td>
 
