--- a/test_ciSystem_20170120/app/views/tbl_slot_config/new.phtml
+++ b/test_ciSystem_20170120/app/views/tbl_slot_config/new.phtml
@@ -47,7 +47,7 @@
 <div class="form-group">
     <label for="fieldBoolSlotAvailability" class="col-sm-2 control-label">Bool Of Slot Of Availability</label>
     <div class="col-sm-10">
-        <?php echo $this->tag->textField(["bool_slot_availability", "size" => 30, "class" => "form-control", "id" => "fieldBoolSlotAvailability"]) ?>
+        <?php echo $this->tag->textField(["uint_slot_availability", "size" => 30, "class" => "form-control", "id" => "fieldBoolSlotAvailability"]) ?>
     </div>
 </div>
 
